adapter/internal/operator/gateway-api/testdata/backendtrafficpolicy-with-ratelimit-invalid-regex.out.yaml
backendTrafficPolicies:
- apiVersion: apk.wso2.com/v1alpha1
  kind: BackendTrafficPolicy
  metadata:
    creationTimestamp: null
    name: policy-for-gateway
    namespace: envoy-gateway
  spec:
    rateLimit:
      global:
        rules:
        - clientSelectors:
          - headers:
            - name: x-user-id
              type: RegularExpression
              value: '*.illegal.regex'
            - name: x-org-id
              type: Distinct
          limit:
            requests: 10
            unit: Hour
      type: Global
    targetRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-1
      namespace: envoy-gateway
  status:
    ancestors:
    - ancestorRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
        namespace: envoy-gateway
      conditions:
      - lastTransitionTime: null
        message: 'RateLimit: regex "*.illegal.regex" is invalid: error parsing regexp:
          missing argument to repetition operator: `*`'
        reason: Invalid
        status: "False"
        type: Accepted
      controllerName: apk.wso2.com/gatewayclass-controller
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
  status:
    listeners:
    - attachedRoutes: 1
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    creationTimestamp: null
    name: grpcroute-1
    namespace: default
  spec:
    parentRefs:
    - name: gateway-1
      namespace: envoy-gateway
      sectionName: http
    rules:
    - backendRefs:
      - name: service-1
        port: 8080
  status:
    parents:
    - conditions:
      - lastTransitionTime: null
        message: Route is accepted
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Resolved all the Object references for the Route
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: apk.wso2.com/gatewayclass-controller
      parentRef:
        name: gateway-1
        namespace: envoy-gateway
        sectionName: http
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      listeners:
      - address: null
        name: envoy-gateway/gateway-1/http
        ports:
        - containerPort: 10080
          name: http
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          apk.wso2.com/owning-gateway-name: gateway-1
          apk.wso2.com/owning-gateway-namespace: envoy-gateway
      name: envoy-gateway/gateway-1
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      text:
      - path: /dev/stdout
    http:
    - address: 0.0.0.0
      hostnames:
      - '*'
      isHTTP2: true
      name: envoy-gateway/gateway-1/http
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
      routes:
      - backendWeights:
          invalid: 0
          valid: 0
        destination:
          name: grpcroute/default/grpcroute-1/rule/0
          settings:
          - addressType: IP
            endpoints:
            - host: 7.7.7.7
              port: 8080
            protocol: GRPC
            weight: 1
        hostname: '*'
        isHTTP2: true
        name: grpcroute/default/grpcroute-1/rule/0/match/-1/*
